<resources>
    <string name="app_name">Daneshjooyar</string>
    <string name="img_desc">image desc</string>
    <string name="login_or_signup">ورود یا ثبت نام</string>
    <string name="login_desc">لطفا شماره موبایل خود را وارد کنید.</string>
    <string name="terms"><u>شرایط و قوانین</u></string>
    <string name="edit_phone">ویرایش شماره</string>
    <string name="resend">1:22 ثانیه تا ارسال مجدد</string>
    <string name="network_connection">اتصال به اینترنت</string>
    <string name="connection_desc">به اینترنت متصل نیستید. برای استفاده از اپلیکیشن به اینترنت متصل شوید.</string>
    <string name="mobile_network">اینترنت موبایل</string>
    <string name="wifi_network">اینترنت wi-fi</string>
    <string name="terms_text">
لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.\n
کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.\n
لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.\n
کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
    <string name="terms_header">قوانین و مقررات لرن آکادمی</string>
    <string name="home">خانه</string>
    <string name="about_us">درباره ما</string>
    <string name="documents">مدارک</string>
    <string name="course_info">اطلاعات</string>
    <string name="course_videos">ویدیو ها</string>
    <string name="ticket_title">ارسال پیام به پشتیبانی</string>
    <string name="send">ارسال</string>
    <string name="video_desc">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</string>
    <string name="progress_title">درصد پیشرفت</string>
    <string name="guid">راهنما</string>
    <string name="next_video">قسمت بعدی</string>
    <string name="previous_video">قسمت قبلی</string>
    <string name="course_info_title">از کی یاد میگیریم ؟</string>
    <string name="no_docs">شما هنوز مدرکی ندارید\n چون دوره ای را به پایان نرسانده اید.</string>
    <string name="attributes">ویژگی ها</string>
    <string name="social_media">شبکه های اجتماعی</string>
    <string name="youtube">یوتیوب</string>
    <string name="instagram">اینستاگرام</string>
    <string name="terms_login">لرن آکادمی را مطالعه کرده‌ام و می‌پذیرم.</string>
    <string name="divider">/</string>
</resources>