<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:minWidth="380dp"
    android:background="@drawable/back_item_content"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/img_cancel"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/img_desc"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticket_title"
        android:textColor="@color/color_text_black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_cancel" />

    <ir.abyx.daneshjooyar.ui.customView.CustomEditText
        android:id="@+id/custom_edt_title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:hintText="عنوان"
        app:layout_constraintEnd_toEndOf="@+id/img_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ir.abyx.daneshjooyar.ui.customView.CustomEditText
        android:id="@+id/custom_edt_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="130dp"
        app:hintText="متن پیام..."
        app:layout_constraintEnd_toEndOf="@+id/custom_edt_title"
        app:layout_constraintStart_toStartOf="@+id/custom_edt_title"
        app:layout_constraintTop_toBottomOf="@+id/custom_edt_title" />

    <ir.abyx.daneshjooyar.ui.customView.CustomButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/custom_edt_desc"
        app:layout_constraintStart_toStartOf="@+id/custom_edt_desc"
        app:layout_constraintTop_toBottomOf="@+id/custom_edt_desc"
        app:text="@string/send" />

</androidx.constraintlayout.widget.ConstraintLayout>